hknweb/static/css/base.css
html {
  min-height: 100vh;
}
body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "Source Sans Pro", sans-serif;
  color: #353535;
  background-color: #252525; /* If footer doesn't reach bottom of screen, this will "extend" the footer */
}
.navi-container,
.content {
  background-color: white; /* Override body's background color */
}

/* Minimum margins for all sections */
.navi-container,
.navi-extension-container,
.content,
.footer {
  padding-left: 13px;
  padding-right: 13px;
}

/* NAVIGATION BAR
 * If confused by the flexbox attributes, see https://css-tricks.com/snippets/css/a-guide-to-flexbox/ for a helpful tutorial
 */
.navi-container {
  padding-top: 7px;
  padding-bottom: 7px;
  /* border-bottom: solid 3px #003262; /* rgba(166, 60, 68, 1); HKN scarlet; hex code: #A63C44 */
}
.navi {
  min-height: 50px;
  max-width: 1250px;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
/* Logo */
.navi a:first-child {
  color: inherit;
}
.navi-logo {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-basis: auto;
}
.navi-logo-img {
  height: 45px;
  color: yellow;
}
.navi-menu-logo-text {
  margin-left: 7px;
}

/* Menu */
.navi-menu {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  flex-basis: auto;
}
.navi-menu > * {
  display: block;
  white-space: nowrap;
}
.navi-menu label {
  cursor: pointer;
}
.navi-menu > label {
  padding-right: 24px;
}
.navi-menu > span:last-of-type {
  margin-left: 24px;
}
.navi-menu > label:last-child {
  padding-right: 0;
  padding-left: 24px;
}
.navi-menu-button {
  padding-left: 24px;
}
.navi-menu label:hover {
  text-decoration: underline;
}
.account-button {
  display: inline-block;
  padding: 9px;
  background-color: #eeeeee;
  border: solid 1px #aaaaaa;
  border-radius: 4px;
  color: #353535;
}
.account-button:hover {
  text-decoration: underline;
}

/* Media queries for responsive design */
/* Desktop display: */
@media screen and (min-width: 710px) {
  .navi-menu-button {
    display: none;
  }
}
/* Mobile display: */
@media screen and (max-width: 800px) {
  .navi-extension {
    flex-direction: column;
  }
  .navi-ext-logo {
    text-align: center;
  }
  .navi-ext-logo {
    padding-bottom: 15px;
  }
}
@media screen and (max-width: 710px) {
  .navi-menu > label {
    display: none;
  }
  .navi-menu-button {
    display: block;
  }
  .navi-extension-columns {
    flex-direction: column;
    width: 100%;
  }
  .navi-extension-columns > * {
    width: 100%;
  }
}

/* Toggle system */
.toggle {
  position: absolute;
  top: -100%;
  left: -100%;
  display: none;
}
.sub-nav-bar {
  position: absolute;
  opacity: 0;
  text-align: center;
  background-color: #252525;
  transition: opacity 0.5s ease-out;
  width: 100%;
}
.sub-nav-bar * {
  color: white;
  display: none;
}
#toggle-account:not(:checked)
  ~ #toggle-student:checked
  ~ .navi-container
  label[for="toggle-student"] {
  text-decoration: underline;
}
#toggle-account:not(:checked) ~ #toggle-student:checked ~ #student-nav-bar {
  opacity: 1;
}
#toggle-account:not(:checked) ~ #toggle-student:checked ~ #student-nav-bar * {
  display: inline;
}
#toggle-account:not(:checked)
  ~ #toggle-industry:checked
  ~ .navi-container
  label[for="toggle-industry"] {
  text-decoration: underline;
}
#toggle-account:not(:checked) ~ #toggle-industry:checked ~ #industry-nav-bar {
  opacity: 1;
}
#toggle-industry:checked ~ #industry-nav-bar * {
  display: inline;
}
#toggle-account:not(:checked)
  ~ #toggle-outreach:checked
  ~ .navi-container
  label[for="toggle-outreach"] {
  text-decoration: underline;
}
#toggle-account:not(:checked) ~ #toggle-outreach:checked ~ #outreach-nav-bar {
  opacity: 1;
}
#toggle-account:not(:checked) ~ #toggle-outreach:checked ~ #outreach-nav-bar * {
  display: inline;
}
#toggle-account:not(:checked)
  ~ #toggle-events:checked
  ~ .navi-container
  label[for="toggle-events"] {
  text-decoration: underline;
}
#toggle-account:not(:checked) ~ #toggle-events:checked ~ #events-nav-bar {
  opacity: 1;
}
#toggle-account:not(:checked) ~ #toggle-events:checked ~ #events-nav-bar * {
  display: inline;
}
#toggle-account:not(:checked)
  ~ #toggle-about:checked
  ~ .navi-container
  label[for="toggle-about"] {
  text-decoration: underline;
}
#toggle-account:not(:checked) ~ #toggle-about:checked ~ #about-nav-bar {
  opacity: 1;
}
#toggle-account:not(:checked) ~ #toggle-about:checked ~ #about-nav-bar * {
  display: inline;
}
#toggle-account:checked ~ #account-nav-bar {
  opacity: 1;
}
#toggle-account:checked ~ #account-nav-bar * {
  display: inline;
}
#toggle-account:checked ~ .navi-container label[for="toggle-account"] {
  text-decoration: underline;
}
#carrot {
  position: relative;
  border: solid black;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  margin-left: 5px;
  transform: rotate(45deg);
  transition: transform 0.4s ease-out;
}
#toggle-account:checked ~ .navi-container #carrot {
  transform: rotate(225deg);
  transition: transform 0.4s ease-out;
}
.slash {
  padding-left: 1em;
  padding-right: 1em;
  color: #fdb515;
}

/* Navbar link styling */
.navi-extension-container a {
  color: inherit;
}
.navi-container a:link,
.navi-extension-container a:link {
  text-decoration: none;
}
.account-button:hover {
  text-decoration: underline;
}
.navi-container a:visited,
.navi-extension-container a:visited {
  text-decoration: none;
}
.navi-container a:hover,
.navi-extension-container a:hover {
  text-decoration: underline;
}
.navi-menu a:hover {
  text-decoration: none;
}
.navi-container a:active,
.navi-extension-container a:active {
  text-decoration: underline;
}

/* HEADING (which has the page's title) */
.heading {
  font-size: 3em;
  font-weight: 300;
  text-align: center;
  margin: 0;
  margin-bottom: 2rem;
}

/* FOOTER */
.footer {
  background-color: #252525;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 0; /* .footer-block element will provide 13px of padding-right */
}
.footer-container {
  max-width: 1250px;
  margin: 0 auto;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: wrap;
}
.footer-block {
  color: white;
  padding-top: 7px;
  padding-bottom: 7px;
  padding-right: 13px;
}
.footer-block-title {
  font-size: 1.25em;
}
.footer-block-text {
  color: rgba(255, 255, 255, 0.75);
}

.red-text {
  color: #ff0020;
}

.small-margin {
  margin-left: 4%;
}

/* Add this to out divs that evelope the body of a page.
   Makes sure "float" doesn't mess up the css. */
.parent {
  overflow: hidden;
}

